--- a/web/index.html
+++ b/web/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bot Management System</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
+    <script>
+        // Initialize tooltips
+        document.addEventListener('DOMContentLoaded', function() {
+            var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+            var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+                return new bootstrap.Tooltip(tooltipTriggerEl)
+            });
+        });
+    </script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -95,6 +104,8 @@
                                             <th>Bot Name</th>
                                             <th>Type</th>
                                             <th>Status</th>
+                                            <th>Performance</th>
+                                            <th>Time Running</th>
                                             <th>Last Active</th>
                                             <th>Actions</th>
                                         </tr>
@@ -128,6 +139,8 @@
                                     <th>Name</th>
                                     <th>Type</th>
                                     <th>Status</th>
+                                    <th>Performance</th>
+                                    <th>Time Running</th>
                                     <th>Last Active</th>
                                     <th>Actions</th>
                                 </tr>
